--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			<version>2.4.0-b180725.0644</version>
+			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
