--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
 	<groupId>htwb.projekt.p2p.volltextsuche</groupId>
 	<artifactId>textextraction-18</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
